# news-letter

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-11a3eb02c652529b018e6c40963b64fe784b28b8b63e66bd2ae3485686629dbb.json  query-3d4c12c53c3703a49e9adb6b4d20bf385f1c6c3d26fa3637d16732f0d956561b.json  query-7c241002710ea9b5a1ee695c3deeec98a25297295c15bfff180e7c97b0653e02.json  query-85e0900bd371fff183940d50df9b2abcdef442d216b07425a28fae6508a78462.json  query-a32384a76e0b056d235938591458935105cdce6a79f18901c1ff1f0c070500bf.json
configuration/: base.yaml  production.yaml
migrations/: 20250917210215_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscription_confirm.rs  subscriptions.rs
