[package]
name = "news-letter"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.13"
actix-web = "4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
